fix horizontal scroll

--- a/src/scss/components/mapBlock.scss
+++ b/src/scss/components/mapBlock.scss
@@ -1,6 +1,11 @@
 .map {
     width: 100%;
 }
+.map-buttons {
+    display: flex;
+    padding-left: 20px;
+    gap: 20px;
+}
 .map-btn {
     height: 44px;
     padding: 0 15px;
@@ -25,11 +30,15 @@
     left: 50%;
     z-index: 20;
     transform: translate(-50%, 0);
-    display: flex;
-    gap: 20px;
 }
 
 //media
+@media screen and (max-width: 1391px) {
+    .map-buttons {
+        padding-left: 0;
+    }
+}
+
 @media screen and (max-width: 480px) {
     .map-btn {
         width: 100%;
