--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -45,7 +45,7 @@
         z-index: 15;
     }
     &__map-nav {
-        margin: 30px 0 0 20px;
+        margin: 30px 0 0 0;
     }
     &__map-show__btn {
         display: none;
@@ -217,9 +217,6 @@
             width: 100%;
             transform: translate(0, 100%);
             transition: transform ease 0.5s;
-        }
-        &__map-nav {
-            margin: 30px 0 0 0;
         }
         &__map-show__btn {
             display: flex;
